# vaccinator

./: .gitignore  Cargo.toml  Makefile.toml  README.md
extractor/: Cargo.toml
extractor/src/: main.rs
interface/: Cargo.toml
interface/src/: debug.rs  lib.rs  tools.rs
loader/: Cargo.toml
loader/.cargo/: config.toml
loader/src/: lib.rs  tools.rs
src/: debug.rs  main.rs  state.rs
test/: MakeFile.toml
test/dummy/: Cargo.toml
test/dummy/src/: lib.rs
test/image/: Cargo.toml
test/image/src/: lib.rs
test/program/: Cargo.toml
test/program/src/: main.rs
