[package]
authors = ["svorr <svorre2304@gmail.com>"]
edition = "2021"
name = "vaccinator"
version = "0.1.0"


[workspace]
members = [
	"extractor",
	"interface",
	"loader",
	"test/program",
	"test/image",
	"test/dummy",
]




[dependencies]
ntapi = "0.3.7"
memoffset = { version = "0.6.5", features = ["unstable_const"] }
const-random = "0.1.13"
oorandom = "11.1.3"
obfstr = "0.3.0"
log = "0.4.16"
simplelog = "0.12.0"

nt-syscall = { git = "https://github.com/Jardynq/nt-syscall-rs", features = ["default"] }
pe-image = { git = "https://github.com/Jardynq/pe-image-rs" }
interface = { path = "./interface" }

[dependencies.winapi]
version = "0.3.9"
features = [
	"impl-debug",
	"impl-default",

	"winnt", 
	"minwindef", 
	"ntdef", 

	"heapapi",
	"memoryapi",
	"libloaderapi",
	"errhandlingapi",
	"processthreadsapi",
	"sysinfoapi",
	"winbase",
	"processenv",
	"sysinfoapi",
	"tlhelp32",
	"wow64apiset",
]
