[package]
authors = ["svorr <svorre2304@gmail.com>"]
edition = "2021"
name = "extractor"
version = "0.1.0"


[dependencies]
clap = { version = "3.1.17", features = ["derive"] }
pdb = "0.7.0"
log = "0.4.17"
env_logger = "0.9.0"
anyhow = "1.0.57"

[dependencies.winapi]
version = "0.3.9"
features = [
	"winnt",
]