[package]
name = "interface"
version = "0.1.0"
authors = ["svorr <svorre2304@gmail.com>"]
edition = "2021"


[lib]
path = "src/lib.rs"


[dependencies]
ntapi = "0.3.7"
nt-syscall = { git = "https://github.com/Jardynq/nt-syscall-rs", features = ["default"] }

[dependencies.winapi]
version = "0.3.9"
features = [
	"minwindef", 
]
