[package]
name = "loader"
version = "0.1.0"
authors = ["svorr <svorre2304@gmail.com>"]
edition = "2021"


[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]


[features]
build = []
debug = ["build"]




[dependencies]
ntapi = "0.3.6"
aligned = "0.4.0"


[dependencies.interface]
path = "../interface"

[dependencies.nt-syscall]
path = "../../nt-syscall"
features = [
	"nt", 
	"windows_10", 
]


[dependencies.winapi]
version = "0.3.9"
features = [
	"winnt", 
	"minwindef", 
	"ntdef", 
	"ntstatus",
]

[dependencies.memoffset]
version = "0.6.4"
features = [
	"unstable_const"
]