[package]
name = "loader"
version = "0.1.0"
authors = ["svorr <svorre2304@gmail.com>"]
edition = "2021"


[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]


[features]
build = []
debug = ["build"]




[dependencies]
ntapi = "0.3.7"
aligned = "0.4.0"
memoffset = { version = "0.6.5", features = ["unstable_const"] }

nt-syscall = { git = "https://github.com/Jardynq/nt-syscall-rs", features = ["default"] }
pe-image = { git = "https://github.com/Jardynq/pe-image-rs" }
interface = { path = "../interface" }

[dependencies.winapi]
version = "0.3.9"
features = [
	"winnt", 
	"minwindef", 
	"ntdef", 
	"ntstatus",
]
