[package]
name = "image"
version = "0.1.0"
authors = ["svorr <svorre2304@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]


[dependencies]
nt-syscall = { git = "https://github.com/Jardynq/nt-syscall-rs", features = ["default"] }
pe-image = { git = "https://github.com/Jardynq/pe-image-rs" }

[dependencies.ntapi]
version = "0.3.7"
features = [
	"user",
	"func-types",
	"impl-default"
]

[dependencies.winapi]
version = "0.3.9"
features = [
	"impl-debug",
	"impl-default",

	"minwindef",
	"winnt",
	"winuser",
	"psapi",
	"processthreadsapi",
	"ntdef",
	"libloaderapi",
	"handleapi",
	"winbase",
]
